--- a/application/FSPOC-WebProject/Content/scss/Tapestry.scss
+++ b/application/FSPOC-WebProject/Content/scss/Tapestry.scss
@@ -57,6 +57,7 @@ body.tapestryModule {
             position: absolute;
             left: 66px;
             top: 96px;
+            width: 1564px;
 
             .libraryCategory {
                 width: 220px;
